Bug Fix with Allergy Agent

--- a/challlenge-medical-diet-navigator/colab-notebooks/Step_2_ADK_Food_Agents_Configuration.ipynb
+++ b/challlenge-medical-diet-navigator/colab-notebooks/Step_2_ADK_Food_Agents_Configuration.ipynb
@@ -221,7 +221,8 @@
         "from google.adk.sessions import InMemorySessionService\n",
         "from google.adk.tools.bigquery import BigQueryCredentialsConfig, BigQueryToolset\n",
         "from google.adk.tools.bigquery.config import BigQueryToolConfig, WriteMode\n",
-        "from google.adk.tools import google_search\n"
+        "from google.adk.tools import google_search\n",
+        "from google.adk.tools import agent_tool\n"
       ],
       "metadata": {
         "id": "1-HYJQb1WEil"
@@ -696,86 +697,40 @@
     {
       "cell_type": "code",
       "source": [
-        "# @title Define the Allergy Research Agent\n",
-        "import sys, subprocess, importlib, asyncio, re\n",
-        "from urllib.parse import urlparse, urljoin\n",
-        "import httpx\n",
+        "# @title Allergy Research Agent\n",
+        "\n",
         "from bs4 import BeautifulSoup\n",
+        "from google.adk.agents import Agent\n",
+        "from google.adk.tools import VertexAiSearchTool\n",
+        "from google.genai import types\n",
+        "from google.adk.tools import google_search\n",
         "\n",
         "\n",
-        "# ---- Configure the site you want to use as the sole information source ----\n",
-        "SITE_URL = \"http://www.allergenonline.org/\"     # <-- change me\n",
-        "_ALLOWED = urlparse(SITE_URL).netloc.lower()\n",
-        "\n",
-        "def fetch_url(url: str) -> dict:\n",
-        "    \"\"\"\n",
-        "    Fetch and return cleaned text content from a URL within the allowed domain.\n",
-        "\n",
-        "    Args:\n",
-        "        url (str): HTTP/HTTPS URL to fetch.\n",
-        "\n",
-        "    Returns:\n",
-        "        dict: {\n",
-        "          \"url\": <final-url>,\n",
-        "          \"title\": <page title or None>,\n",
-        "          \"text\": <cleaned text (truncated)>,\n",
-        "          \"chars\": <len(text)>\n",
-        "        }\n",
-        "\n",
-        "    Notes:\n",
-        "      - Only allows URLs on the configured site/domain.\n",
-        "      - Strips scripts/styles and collapses whitespace.\n",
-        "      - Truncates very large pages to keep context small.\n",
-        "    \"\"\"\n",
-        "    try:\n",
-        "        u = url.strip()\n",
-        "        # Normalize relative links against base, just in case\n",
-        "        if u.startswith(\"/\"):\n",
-        "            u = urljoin(SITE_URL, u)\n",
-        "\n",
-        "        parsed = urlparse(u)\n",
-        "        if parsed.scheme not in {\"http\", \"https\"}:\n",
-        "            return {\"status\": \"error\", \"error_message\": \"Only http/https URLs are allowed.\"}\n",
-        "        if not parsed.netloc.lower().endswith(_ALLOWED):\n",
-        "            return {\"status\": \"error\", \"error_message\": f\"URL not in allowed domain: {_ALLOWED}\"}\n",
-        "\n",
-        "        # Fetch with sane limits\n",
-        "        with httpx.Client(follow_redirects=True, timeout=20) as client:\n",
-        "            resp = client.get(u, headers={\"User-Agent\": \"adk-site-agent/1.0\"})\n",
-        "            resp.raise_for_status()\n",
-        "            ctype = resp.headers.get(\"content-type\", \"\").lower()\n",
-        "            if \"text/html\" not in ctype and \"application/xhtml\" not in ctype:\n",
-        "                return {\"status\": \"error\", \"error_message\": f\"Unsupported content-type: {ctype}\"}\n",
-        "\n",
-        "            soup = BeautifulSoup(resp.text, \"html.parser\")\n",
-        "            # Remove noise\n",
-        "            for tag in soup([\"script\", \"style\", \"noscript\"]):\n",
-        "                tag.decompose()\n",
-        "            title = (soup.title.string.strip() if soup.title and soup.title.string else None)\n",
-        "            text = re.sub(r\"\\s+\", \" \", soup.get_text(separator=\" \", strip=True))\n",
-        "            MAX_CHARS = 20000\n",
-        "            if len(text) > MAX_CHARS:\n",
-        "                text = text[:MAX_CHARS] + \" ... [truncated]\"\n",
-        "            return {\"status\": \"success\", \"url\": str(resp.url), \"title\": title, \"text\": text, \"chars\": len(text)}\n",
-        "\n",
-        "    except Exception as e:\n",
-        "        return {\"status\": \"error\", \"error_message\": str(e)}\n",
-        "\n",
-        "# ---- Agent that uses Google Search (site-restricted) + fetch_url ----\n",
+        "# ---- Agent that uses Allergy Online webite Data Store ----\n",
         "INSTR = f\"\"\"\n",
-        "You are a site-scoped research agent.\n",
-        "Only use Google Search constrained to the domain {_ALLOWED} by prefixing queries with 'site:{_ALLOWED}'.\n",
-        "You research information about food alergens and food health information.\n",
-        "When you identify promising results, call fetch_url(url) to open and read the page content.\n",
-        "Cite the specific URLs you used in your final answer. Do not use sources outside {_ALLOWED}.\n",
+        "You are an allergen researcher.\n",
+        "Also, use your own knowledge about allergies and health.\n",
+        "You can also use the Google Search tool to find relevant information on the web.\n",
+        "When you use the Google Search tool, always cite the source of the information you find.\n",
         "\"\"\"\n",
+        "\n",
+        "MODEL = \"gemini-2.5-flash\"\n",
+        "\n",
+        "agent_generation = types.GenerateContentConfig(\n",
+        "    temperature=0.6,\n",
+        "    top_p=0.9,\n",
+        "    max_output_tokens=32768,\n",
+        ")\n",
         "\n",
         "allergen_research_agent = Agent(\n",
         "    model=MODEL,   # or your preferred Gemini model\n",
-        "    name=\"site_research_agent\",\n",
-        "    description=f\"Answers questions using only content from {_ALLOWED}.\",\n",
+        "    name=\"allergy_research_agent\",\n",
+        "    description=f\"Answer questions about allergies and related health concerns.\",\n",
         "    instruction=INSTR,\n",
-        "    tools=[google_search, fetch_url],  # built-in search + custom fetcher\n",
+        "    tools=[\n",
+        "        google_search\n",
+        "    ],\n",
+        "    generate_content_config=agent_generation,\n",
         ")\n"
       ],
       "metadata": {
@@ -788,21 +743,220 @@
     {
       "cell_type": "code",
       "source": [
+        "# @title Define the Image Agent\n",
+        "from __future__ import annotations\n",
+        "\n",
+        "import time, uuid\n",
+        "from typing import Any, Dict, List, Optional\n",
+        "\n",
+        "from google import genai\n",
+        "from google.genai import types\n",
+        "from google.cloud import storage\n",
+        "from google.adk.agents import Agent\n",
+        "\n",
+        "# =========================\n",
+        "# Config\n",
+        "# =========================\n",
+        "IMAGE_BUCKET = \"food-agent-generated-images-dar\"  # must be public\n",
+        "\n",
+        "# =========================\n",
+        "# Helpers\n",
+        "# =========================\n",
+        "def _ext_for_mime(mime_type: str) -> str:\n",
+        "    m = (mime_type or \"\").lower()\n",
+        "    if \"jpeg\" in m or \"jpg\" in m:\n",
+        "        return \"jpg\"\n",
+        "    if \"webp\" in m:\n",
+        "        return \"webp\"\n",
+        "    if \"png\" in m:\n",
+        "        return \"png\"\n",
+        "    if \"gif\" in m:\n",
+        "        return \"gif\"\n",
+        "    # default\n",
+        "    return \"png\"\n",
+        "\n",
+        "def _public_gcs_url(bucket: str, blob_name: str) -> str:\n",
+        "    # Public URL that works without auth if bucket is public\n",
+        "    return f\"https://storage.googleapis.com/{bucket}/{blob_name}\"\n",
+        "\n",
+        "def _upload_bytes_to_gcs(\n",
+        "    data: bytes,\n",
+        "    bucket: str,\n",
+        "    mime_type: str = \"image/png\",\n",
+        "    prefix: str = \"generated\",\n",
+        ") -> Dict[str, str]:\n",
+        "    client = storage.Client()\n",
+        "    bucket_obj = client.bucket(bucket)\n",
+        "\n",
+        "    ext = _ext_for_mime(mime_type)\n",
+        "    blob_name = f\"{prefix}/{int(time.time())}-{uuid.uuid4().hex}.{ext}\"\n",
+        "\n",
+        "    blob = bucket_obj.blob(blob_name)\n",
+        "    # Optionally set cache control if you want CDN/browser caching\n",
+        "    # blob.cache_control = \"public, max-age=86400\"\n",
+        "    blob.upload_from_string(data, content_type=mime_type)\n",
+        "    public_url = _public_gcs_url(bucket, blob_name)\n",
+        "\n",
+        "    return {\n",
+        "        \"gcs_uri\": f\"gs://{bucket}/{blob_name}\",\n",
+        "        \"public_url\": public_url,\n",
+        "        \"mime_type\": mime_type,\n",
+        "        \"filename\": blob_name,\n",
+        "        \"markdown\": f'![{blob_name}]({public_url} \"Generated by Imagen\")',\n",
+        "    }\n",
+        "\n",
+        "# =========================\n",
+        "# Tool\n",
+        "# =========================\n",
+        "def generate_image_tool(\n",
+        "    prompt: str,\n",
+        "    *,\n",
+        "    bucket: str = IMAGE_BUCKET,\n",
+        "    n: int = 1,\n",
+        "    return_text: bool = False,\n",
+        ") -> Dict[str, Any]:\n",
+        "    \"\"\"\n",
+        "    Generate image(s) with Gemini 2.5 Flash Image (preview),\n",
+        "    upload to a (public) GCS bucket, and return lightweight URLs.\n",
+        "\n",
+        "    Returns:\n",
+        "        {\n",
+        "          \"status\": \"success\",\n",
+        "          \"images\": [\n",
+        "            {\"public_url\": \"...\", \"gcs_uri\": \"...\", \"mime_type\": \"...\", \"filename\": \"...\"}\n",
+        "          ],\n",
+        "          \"text\": \"optional textual output (if return_text=True)\"\n",
+        "        }\n",
+        "    \"\"\"\n",
+        "    #client = genai.Client(vertexai=True, api_key=None)\n",
+        "\n",
+        "    client = genai.Client(vertexai=True, project=os.environ.get(\"GOOGLE_CLOUD_PROJECT\"), location=\"global\")\n",
+        "\n",
+        "\n",
+        "    contents = [types.Content(role=\"user\", parts=[types.Part.from_text(text=prompt)])]\n",
+        "    # Keep tokens lean: default to IMAGE-only; include TEXT only if requested\n",
+        "    response_modalities = [\"IMAGE\"] + ([\"TEXT\"] if return_text else [])\n",
+        "\n",
+        "    cfg = types.GenerateContentConfig(\n",
+        "        temperature=1.0,\n",
+        "        top_p=0.95,\n",
+        "        max_output_tokens=4096,\n",
+        "        response_modalities=response_modalities,\n",
+        "        safety_settings=[\n",
+        "            types.SafetySetting(category=\"HARM_CATEGORY_HATE_SPEECH\", threshold=\"OFF\"),\n",
+        "            types.SafetySetting(category=\"HARM_CATEGORY_DANGEROUS_CONTENT\", threshold=\"OFF\"),\n",
+        "            types.SafetySetting(category=\"HARM_CATEGORY_SEXUALLY_EXPLICIT\", threshold=\"OFF\"),\n",
+        "            types.SafetySetting(category=\"HARM_CATEGORY_HARASSMENT\", threshold=\"OFF\"),\n",
+        "        ],\n",
+        "    )\n",
+        "\n",
+        "    try:\n",
+        "        stream = client.models.generate_content_stream(\n",
+        "            model=\"gemini-2.5-flash-image-preview\",\n",
+        "            contents=contents,\n",
+        "            config=cfg,\n",
+        "        )\n",
+        "\n",
+        "        outputs: List[Dict[str, str]] = []\n",
+        "        text_out: List[str] = []\n",
+        "\n",
+        "        for chunk in stream:\n",
+        "            cand = getattr(chunk, \"candidates\", [None])[0]\n",
+        "            if not cand or not cand.content or not getattr(cand.content, \"parts\", None):\n",
+        "                continue\n",
+        "\n",
+        "            for part in cand.content.parts:\n",
+        "                # Optional text (captions/notes)\n",
+        "                if getattr(part, \"text\", None):\n",
+        "                    text_out.append(part.text)\n",
+        "\n",
+        "                # Image bytes\n",
+        "                inline = getattr(part, \"inline_data\", None)\n",
+        "                if inline and getattr(inline, \"data\", None):\n",
+        "                    info = _upload_bytes_to_gcs(\n",
+        "                        inline.data,\n",
+        "                        bucket=bucket,\n",
+        "                        mime_type=inline.mime_type or \"image/png\",\n",
+        "                    )\n",
+        "                    outputs.append(info)\n",
+        "                    if len(outputs) >= n:\n",
+        "                        break\n",
+        "\n",
+        "            if len(outputs) >= n:\n",
+        "                break\n",
+        "\n",
+        "        if not outputs and not text_out:\n",
+        "            return {\"status\": \"error\", \"error_message\": \"No image or text returned.\"}\n",
+        "\n",
+        "        result: Dict[str, Any] = {\"status\": \"success\", \"images\": outputs}\n",
+        "        if return_text and text_out:\n",
+        "            result[\"text\"] = \"\\n\".join(text_out)\n",
+        "        return result\n",
+        "\n",
+        "    except Exception as e:\n",
+        "        print(\"ERROR generating image:\", e)\n",
+        "        return {\"status\": \"error\", \"error_message\": str(e)}\n",
+        "\n",
+        "# =========================\n",
+        "# Agent\n",
+        "# =========================\n",
+        "agent_generation = types.GenerateContentConfig(\n",
+        "    temperature=0.6,\n",
+        "    top_p=0.9,\n",
+        "    max_output_tokens=2048,\n",
+        ")\n",
+        "\n",
+        "image_agent = Agent(\n",
+        "    model=\"gemini-2.5-flash\",   # planner/brain model\n",
+        "    name=\"imagen_tool_agent\",\n",
+        "    instruction=(\n",
+        "        \"You generate images based on user prompts. \"\n",
+        "        \"When asked for an image, call `generate_image_tool` with a concise visual prompt. \"\n",
+        "        \"Return the Markdown from the tool output to the user so it can be displayed on their website.\"\n",
+        "    ),\n",
+        "    description=\"Agent that creates images via a custom tool powered by Gemini 2.5 Flash Image (preview).\",\n",
+        "    tools=[generate_image_tool],\n",
+        "    generate_content_config=agent_generation,\n",
+        ")\n"
+      ],
+      "metadata": {
+        "id": "kA9CaxcUlQ4A"
+      },
+      "id": "kA9CaxcUlQ4A",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# @title Define the Main (root) Agent\n",
+        "\n",
+        "MODEL = \"gemini-2.5-flash\"\n",
+        "\n",
+        "agent_generation = types.GenerateContentConfig(\n",
+        "    temperature=0.6,\n",
+        "    top_p=0.9,\n",
+        "    max_output_tokens=32768,\n",
+        ")\n",
+        "\n",
         "MAIN_AGENT_INSTRUCTIONS=\"\"\"\n",
         "You are a friendly food and nutrician agent.\n",
         "Answer questions related to food, nutrician, allergies, dietary health, and other inquiries related to thise things.\n",
         "You have 2 helper agents.\n",
         "- The usda_bigquery_agent has access to a large database from the USDA containing all sorts to food-related information.\n",
-        "- The allergen_research agent can search the Allergen Online web site for allergy-related information.\n",
+        "- The image_agent generate images if requested\n",
+        "You can use your tool to search for information about allergies and related health concerns online.\n",
+        "When you use the Google Search tool, always cite the source of the information you find.\n",
         "\"\"\"\n",
         "\n",
-        "main_agent = Agent(\n",
+        "root_agent = Agent(\n",
         "    name=\"main_agent\",\n",
         "    model=MODEL,\n",
         "    description=\"Provides Answers to Users Food and Allergy Questions.\",\n",
         "    instruction=MAIN_AGENT_INSTRUCTIONS,\n",
-        "    sub_agents=[usda_bigquery_agent, allergen_research_agent],\n",
+        "    tools=[agent_tool.AgentTool(agent=allergen_research_agent)],\n",
+        "    sub_agents=[usda_bigquery_agent, image_agent],\n",
+        "    generate_content_config=agent_generation,\n",
         ")"
       ],
       "metadata": {
@@ -836,7 +990,7 @@
         "# --- Runner ---\n",
         "# Key Concept: Runner orchestrates the agent execution loop.\n",
         "runner = Runner(\n",
-        "    agent=main_agent, # The agent we want to run\n",
+        "    agent=root_agent, # The agent we want to run\n",
         "    app_name=APP_NAME,   # Associates runs with our app\n",
         "    session_service=session_service # Uses our session manager\n",
         ")\n",
@@ -895,9 +1049,10 @@
         "\n",
         "questions = [\n",
         "     \"List all tables in the dataset.\",\n",
-        "     \"Top 10 foods by protein per 100g from the table `food_nutrient` joined with `nutrient`.\",\n",
-        "     \"How many rows are in `food`?\",\n",
-        "     \"Give me a dinner recommendation for someone with allergies to dairy and nuts. Include a meat, starch, and vegetable\"\n",
+        "    \"Top 10 foods by protein per 100g from the table `food_nutrient` joined with `nutrient`.\",\n",
+        "    \"How many rows are in `food`?\",\n",
+        "    \"Give me a dinner recommendation for someone with allergies to dairy and nuts. Include a meat, starch, and vegetable\"\n",
+        "    \"Create an Image of a prepared steak dinner in a cozy atmosphere\"\n",
         "    ]\n",
         "\n",
         "# We need an async function to await our interaction helper\n",
@@ -938,7 +1093,7 @@
         "\n",
         "# Wrap the agent in an AdkApp object\n",
         "app = agent_engines.AdkApp(\n",
-        "    agent=main_agent,\n",
+        "    agent=root_agent,\n",
         "    enable_tracing=True,\n",
         ")\n",
         "\n",
@@ -951,6 +1106,11 @@
         "        \"google-genai\",\n",
         "        \"httpx\",\n",
         "        \"beautifulsoup4\",\n",
+        "        \"google-cloud-storage\",\n",
+        "        \"google-cloud-bigquery\",\n",
+        "        \"google-cloud-logging\",\n",
+        "        \"google-cloud-resource-manager\",\n",
+        "        \"google-genai\"\n",
         "    ]\n",
         ")\n",
         "\n",
